--- a/Css/login.css
+++ b/Css/login.css
@@ -26,14 +26,25 @@ form {
     flex-direction: column;
 }
 
-label {
-    margin-top: 1em;
+.form-group {
+    position: relative;
 }
 
-input[type="text"], input[type="email"], input[type="password"], select {
+label {
+    margin-top: 1em;
+    display: flex;
+    align-items: center;
+}
+
+label i {
+    margin-right: 0.5em;
+}
+
+input[type="email"], input[type="password"] {
     padding: 0.5em;
     margin-top: 0.5em;
     margin-bottom: 1em;
+    width: calc(100% - 1em); /* Restar el padding para que encaje dentro del contenedor */
 }
 
 button {
@@ -56,6 +67,21 @@ a:hover {
     color: #3742fa;
 }
 
+.password-group {
+    display: flex;
+    align-items: center;
+}
+
+.password-group input {
+    flex: 1;
+}
+
+.password-group .toggle-password {
+    margin-left: -30px; /* Espacio para el icono del ojo */
+    cursor: pointer;
+}
+
 #error-message {
     margin-top: 1em;
 }
+
